# Streamlit_GJ_class

./: 02_langchain_exam.ipynb  03_assignment.ipynb  03_assignment.py  03_langchain_exam.ipynb  04_langchain_exam.ipynb  app.py  assignment03.ipynb  assignment03.py  llm.py  pyproject.toml  requirements.txt  tax_exam(prof).ipynb  tax_exam.ipynb  tax_project.py
langchain_example/: 01_langchain_exam.ipynb  tax_exam_streamlit.ipynb  tax_project.ipynb
