[tool.poetry]
name = "langchain-env"
version = "0.1.0"
description = ""
authors = ["elios404 <elioscode@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
langchain-community = "^0.3.29"
langchain-openai = "^0.3.32"
langchain-pinecone = "^0.2.11"
langchain-text-splitters = "^0.3.9"
langchain = "^0.3.27"
pinecone = "^7.3.0"
streamlit = "^1.49.0"
docx2txt = "^0.9"
langchain-core = "^0.3.75"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
